--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Easy-Bank</title>
     
   <script type="module" crossorigin src="/assets/index.36943f1f.js"></script>
-    <link rel="stylesheet" href="/assets/index.f4eb84af.css">
+    <link rel="stylesheet" href="./assets/index.f4eb84af.css">
   </head>
 
 <body>
