--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                     <div class="w-full mt-8 hover:-translate-y-5 cursor-pointer transform translate hover:shadow-2xl">
 
                         <div class="w-11/12 mx-auto mt-2">
-                            <img src="/assets/image-currency.8844ad9b.jpg" alt="dollars" class="rounded-lg mt-2">
+                            <img src="./assets/image-currency.8844ad9b.jpg" alt="dollars" class="rounded-lg mt-2">
                         </div>
                         <div class="w-4/5 mx-auto">
                             <h6 class="mt-6 text-gray-400">By Claire Robinson</h6>
@@ -308,7 +308,7 @@
                     <div class="w-full mt-14 hover:-translate-y-5 cursor-pointer transform translate hover:shadow-2xl">
 
                         <div class="w-11/12 mx-auto">
-                            <img src="/assets/image-restaurant.2f328987.jpg" alt="restaurant" class="rounded-lg">
+                            <img src="./assets/image-restaurant.2f328987.jpg" alt="restaurant" class="rounded-lg">
                         </div>
                         <div class="w-4/5 mx-auto">
                             <h6 class="mt-6 text-gray-400">By Wilson Hutton</h6>
@@ -321,7 +321,7 @@
                     <div class="w-full mt-14 hover:-translate-y-5 cursor-pointer transform translate hover:shadow-2xl">
 
                         <div class="w-11/12 mx-auto">
-                            <img src="/assets/image-plane.0dac85d5.jpg" alt="plane" class="rounded-lg">
+                            <img src="./assets/image-plane.0dac85d5.jpg" alt="plane" class="rounded-lg">
                         </div>
                         <div class="w-4/5 mx-auto">
                             <h6 class="mt-6 text-gray-400">By Wilson Hutton</h6>
@@ -335,7 +335,7 @@
                         class="w-full mt-14 mb-20 hover:-translate-y-5 cursor-pointer transform translate hover:shadow-2xl">
 
                         <div class="w-11/12 mx-auto">
-                            <img src="/assets/image-confetti.beedb0e2.jpg" alt="dollars" class="rounded-lg">
+                            <img src="./assets/image-confetti.beedb0e2.jpg" alt="dollars" class="rounded-lg">
                         </div>
                         <div class="w-4/5 mx-auto">
                             <h6 class="mt-6 text-gray-400">By Claire Robinson</h6>
